apply plugin: 'com.android.application'

android {


    compileSdkVersion 36
    defaultConfig {
        applicationId "com.hcvardar.manne.rkvaradr"
        minSdkVersion 24
        //noinspection EditedTargetSdkVersion
        targetSdkVersion 36
        versionCode 10
        versionName "2.6"
        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"

    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            ndk.debugSymbolLevel = "FULL"
        }
    }
    productFlavors {
    }

    ndkVersion '29.0.14206865'
    namespace 'com.hcvardar.manne.rkvaradr'

    tasks.withType(JavaCompile).configureEach {
        options.fork = true
        options.forkOptions.jvmArgs += [
                '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']
    }

    packagingOptions {
        jniLibs {
            useLegacyPackaging true
        }
    }
    lint {
        checkReleaseBuilds false
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
}

dependencies {
    implementation fileTree(include: ['*.jar'], dir: 'libs')
    implementation 'com.android.support:appcompat-v7:28.0.0'
    implementation 'androidx.appcompat:appcompat:1.7.1'
    implementation 'com.android.support:design:28.0.0'
    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
    implementation 'com.google.android.libraries.ads.mobile.sdk:ads-mobile-sdk:0.22.0-beta04'
    implementation 'com.google.android.material:material:1.13.0'
    implementation 'androidx.activity:activity:1.12.2'
    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'com.android.support.test:runner:1.0.2'
    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
    implementation 'com.jakewharton:butterknife:10.2.3'
    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
    implementation 'com.android.support:recyclerview-v7:28.0.0'
    implementation 'com.squareup.picasso:picasso:2.71828'
    implementation 'com.stanfy:gson-xml-java:0.1.7'
    implementation fileTree(include: ['*.jar'], dir: 'libs')
    implementation 'com.github.bumptech.glide:glide:5.0.5'
    implementation ("io.getstream:photoview:1.0.3")
    implementation 'com.github.MasayukiSuda:BubbleLayout:v1.2.2'
    implementation "androidx.lifecycle:lifecycle-viewmodel:2.10.0"
    implementation "androidx.lifecycle:lifecycle-livedata:2.10.0"
    implementation "com.pierfrancescosoffritti.androidyoutubeplayer:core:13.0.0"
}
